--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
     "svelte": "^4.0.5",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
