--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "svelte": "^4.0.5",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "marked": "^6.0.0"
   }
 }
